<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">a3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="UserLoginString">Please Select User Type</string>
    <string name="quizTakerLogin">Taker</string>
    <string name="QuizMasterLogin">Master</string>
    
    <string name="no_questions">No Questions</string>
    <string name="menuitem_add">Add</string>
    <string name="menuitem_edit">Edit</string>
    <string name="menuitem_delete">Delete</string>
    <string name="button_save_question">Save Question</string>
    <string name="hint_question">Question (Required)</string>
    <string name="hint_answer">Answer</string>
    <string name="hint_first">Alternative Answer</string>
    <string name="hint_second">Alternative Answer</string>
    <string name="hint_third">Alternative Answer</string>
    <string name="label_question">Question:</string>
    <string name="label_answer">Answer:</string>
    <string name="label_first">Option2:</string>
    <string name="label_second">Option3:</string>
    <string name="label_third">Option4:</string>
    <string name="confirm_title">Are You Sure?</string>
    <string name="confirm_message">This will permanently delete the question</string>
    <string name="ok">OK</string>
    <string name="error_message">You must enter a question</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="question">%1</string>
    <string name="start">Start</string>
    <string name="set_timer">Set Timer</string>
    <string name="timer_details">Timer Value</string>

</resources>
