<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical">
		
        <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:layout_weight="0.8"/>
            
        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.5"
            android:text="@string/UserLoginString"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:id="@+id/loginTextViewinfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.5"
            android:text="Master can create new questions"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center_horizontal" />
        <TextView
            android:id="@+id/loginTextViewinfo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.5"
            android:text="Taker can do the quiz"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:gravity="center_horizontal" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="0.5"
        android:orientation="vertical">

        <Button
            android:id="@+id/qtLoginButton"
            style="android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/quizTakerLogin" />

        <Button
            android:id="@+id/qmLoginButton"
            style="android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/QuizMasterLogin" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
